agregar recursos imagen

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Circle cloning</title>
 </head>
 <body>
-    
+    <header>
+        <a href="#">
+            <img src="./images/logos/circle.svg" alt="">
+        </a>
+    </header>
 </body>
 </html>
