--- a/index.html
+++ b/index.html
@@ -4,12 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Circle cloning</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header>
-        <a href="#">
-            <img src="./images/logos/circle.svg" alt="">
-        </a>
+        <nav class=>
+            <div class="container">
+                <div class="logo">
+                    <img src="./images/logos/circle.svg" alt="">
+                </div>
+                <div class="links">
+                    <ul>
+                        <a href="#"><li><a href="#">Home</a></li>
+                        <li><a href="#">Projects</a></li>
+                        <li><a href="#">Services</a></li>
+                    </ul>
+                </div>
+                
+                <div class="box-blue contact">
+                    <a href="#"><p>
+                        Contact Us
+                    </p></a>
+                </div>
+            </div>
+        </nav>
     </header>
+    <section class="hero">
+        <article >
+            <div class="container">
+                <div class="content">
+                    <h1>
+                        Empower Your Business With Stunning Design!
+                    </h1>
+                    <p class ="descripcion">
+                        Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.
+                    </p>
+                    <div class="links">
+                        <div class =box-blue>
+                            <a href="#"><p>Get in touch</p></a>
+                        </div>
+                        <div class ="link">
+                            <a  href="#"><p>See our work</p></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="imagen">
+                    <img src="./images/hero-section/hero-image.png" alt="">
+                </div>
+            </div>
+        </article>
+    </section>
+
+
+        
+
 </body>
 </html>
