--- a/index.html
+++ b/index.html
@@ -1,62 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Circle cloning</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/global.css">
 </head>
+
 <body>
     <header>
-        <nav class=>
-            <div class="container">
-                <div class="logo">
-                    <img src="./images/logos/circle.svg" alt="">
-                </div>
-                <div class="links">
-                    <ul>
-                        <a href="#"><li><a href="#">Home</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Services</a></li>
-                    </ul>
-                </div>
-                
-                <div class="box-blue contact">
-                    <a href="#"><p>
-                        Contact Us
-                    </p></a>
-                </div>
-            </div>
+        <nav class="header-nav">
+            <a class="logo" href="">
+                <img src="./images/logos/circle.svg" alt="logo navigator">
+            </a>
+            <ul class="header-nav-links">
+                <li class="nav-link nav-link-selected"><a href="./index.html"></a>Home</li>
+                <li class="nav-link"><a href="./index.html#projects"></a>Projects</li>
+                <li class="nav-link"><a href="./index.html#services"></a>Services</li>
+            </ul>
+            <a class="btn" id="header-nav-btn" href="./html/contact.html">Contact Us</a>
         </nav>
     </header>
     <section class="hero">
-        <article >
-            <div class="container">
-                <div class="content">
-                    <h1>
-                        Empower Your Business With Stunning Design!
-                    </h1>
-                    <p class ="descripcion">
-                        Circle is a digital design and development studio. We design and develop astonishing websites and mobile apps.
-                    </p>
-                    <div class="links">
-                        <div class =box-blue>
-                            <a href="#"><p>Get in touch</p></a>
-                        </div>
-                        <div class ="link">
-                            <a  href="#"><p>See our work</p></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="imagen">
-                    <img src="./images/hero-section/hero-image.png" alt="">
-                </div>
+        <div class="hero-content">
+            <h1 class="capitalize">Empower your Business with stunning desing!</h1>
+            <h3>
+                Circle is a digital design and development studio. We design and
+                develop astonishing websites and mobile apps.
+            </h3>
+            <div class="hero-content-links">
+                <a class="btn" href="#newsletter">Get in touch</a>
+                <a href="#projects">See our work</a>
             </div>
-        </article>
+        </div>
+        <div class="hero-image">
+            <div>
+                <img class="img-hero" src="./images/hero-section/hero-image.png" alt="Hero image" />
+            </div>
+            <div>
+                <img class="img-card-top" src="./images/hero-section/card-1.png" alt="Choose your credit card" />
+            </div>
+            <div>
+                <img class="img-card-bottom" src="./images/hero-section/card-2.png"
+                    alt="Project has been accepted card" />
+            </div>
+        </div>
     </section>
+    <section class="clients">
+        <a href="https://www.airbnb.com" target="_blank">
+            <img
+              class="img-client"
+              src="./images/logos/airbnb-logo.svg"
+              alt="airbnb logo"
+            />
+          </a>
+          <a href="https://www.google.com" target="_blank">
+            <img
+              class="img-client"
+              src="./images/logos/google-logo.svg"
+              alt="Google logo"
+            />
+          </a>
+          <a href="https://www.microsoft.com" target="_blank">
+            <img
+              class="img-client"
+              src="./images/logos/microsoft-logo.svg"
+              alt="Microsoft logo"
+            />
+          </a>
+          <a href="https://www.fedex.com" target="_blank">
+            <img
+              class="img-client"
+              src="./images/logos/fedex-logo.svg"
+              alt="FedEx logo"
+            />
+          </a>
+          <a href="https://www.amazon.com" target="_blank">
+            <img
+              class="img-client"
+              src="./images/logos/amazon-logo.svg"
+              alt="amazon logo"
+            />
+          </a>
+    </section>
+    <section id="projects" class="recent-projects">
+        <h2 class="capitalize">Recent projects</h2>
+        <div class="projects-container">
+            <article class="project-card">
+                <a class="project-wrapper" href="./pages/projects.html?id=1">
+                    <img class="img-project" src="./assets/projects-section/1.jpg" alt="Project 1"/>
+                    <div class="project-inner-card">
+                        <h4 class="project-title">Simplify (Static)</h4>
+                        <p class="project-description capitalize">
+                          UI design & App development
+                        </p>
+                        <a class="learn-more" href="./pages/projects.html?id=1">Learn more</a>
+                    </div>
+                </a>
+            </article>
+            <article class="project-card">
+                <a class="project-wrapper" href="./pages/projects.html?id=2">
+                    <img class="img-project" src="./assets/projects-section/2.jpg" alt="Project 2"/>
+                    <div class="project-inner-card">
+                        <h4 class="project-title">Dashcoin</h4>
+                        <p class="project-description capitalize">Web development</p>
+                        <a class="learn-more" href="./pages/projects.html?id=2">Learn more</a>
+                    </div>
+                </a>
+            </article>
+            <article class="project-card">
+                <a class="project-wrapper" href="./pages/projects.html?id=3">
+                    <img class="img-project" src="./assets/projects-section/3.jpg" alt="Project 3"/>
+                    <div class="project-inner-card">
+                        <h4 class="project-title">Vectorify</h4>
+                        <p class="project-description capitalize">
+                          User experience design
+                        </p>
+                        <a class="learn-more" href="./pages/projects.html?id=3">Learn more</a>
+                    </div>
+                </a>
+            </article>
+        </div>
+    </section>  
+    <section id="newsletter" style="height: 100px; background-color: beige;">
 
-
-        
-
+    </section>
+    <script src="./js/index.js"></script>
 </body>
+
 </html>
