Terminada sección Projects

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="header-nav">
-            <a class="logo" href="">
+            <a class="logo" href="./index.html">
                 <img src="./images/logos/circle.svg" alt="logo navigator">
             </a>
             <ul class="header-nav-links">
@@ -25,14 +25,14 @@
     </header>
     <section class="hero">
         <div class="hero-content">
-            <h1 class="capitalize">Empower your Business with stunning desing!</h1>
+            <h1>Empower Your Business With Stunning Desing!</h1>
             <h3>
                 Circle is a digital design and development studio. We design and
                 develop astonishing websites and mobile apps.
             </h3>
             <div class="hero-content-links">
-                <a class="btn" href="#newsletter">Get in touch</a>
-                <a href="#projects">See our work</a>
+                <a class="btn" href="./index.html#newsletter">Get in touch</a>
+                <a href="./index.html#projects">See our work</a>
             </div>
         </div>
         <div class="hero-image">
@@ -50,83 +50,80 @@
     </section>
     <section class="clients">
         <a href="https://www.airbnb.com" target="_blank">
-            <img
-              class="img-client"
-              src="./images/logos/airbnb-logo.svg"
-              alt="airbnb logo"
-            />
-          </a>
-          <a href="https://www.google.com" target="_blank">
-            <img
-              class="img-client"
-              src="./images/logos/google-logo.svg"
-              alt="Google logo"
-            />
-          </a>
-          <a href="https://www.microsoft.com" target="_blank">
-            <img
-              class="img-client"
-              src="./images/logos/microsoft-logo.svg"
-              alt="Microsoft logo"
-            />
-          </a>
-          <a href="https://www.fedex.com" target="_blank">
-            <img
-              class="img-client"
-              src="./images/logos/fedex-logo.svg"
-              alt="FedEx logo"
-            />
-          </a>
-          <a href="https://www.amazon.com" target="_blank">
-            <img
-              class="img-client"
-              src="./images/logos/amazon-logo.svg"
-              alt="amazon logo"
-            />
-          </a>
+            <img class="img-client" src="./images/logos/airbnb-logo.svg" alt="airbnb logo" />
+        </a>
+        <a href="https://www.google.com" target="_blank">
+            <img class="img-client" src="./images/logos/google-logo.svg" alt="Google logo" />
+        </a>
+        <a href="https://www.microsoft.com" target="_blank">
+            <img class="img-client" src="./images/logos/microsoft-logo.svg" alt="Microsoft logo" />
+        </a>
+        <a href="https://www.fedex.com" target="_blank">
+            <img class="img-client" src="./images/logos/fedex-logo.svg" alt="FedEx logo" />
+        </a>
+        <a href="https://www.amazon.com" target="_blank">
+            <img class="img-client" src="./images/logos/amazon-logo.svg" alt="amazon logo" />
+        </a>
     </section>
     <section id="projects" class="recent-projects">
-        <h2 class="capitalize">Recent projects</h2>
+        <h2>Recent projects</h2>
         <div class="projects-container">
             <article class="project-card">
-                <a class="project-wrapper" href="./pages/projects.html?id=1">
-                    <img class="img-project" src="./assets/projects-section/1.jpg" alt="Project 1"/>
+                <a class="project-wrapper" href="./html/projects.html?id=1">
+                    <img class="img-project" src="./images/projects-section/1.jpg" alt="Project 1" />
                     <div class="project-inner-card">
-                        <h4 class="project-title">Simplify (Static)</h4>
-                        <p class="project-description capitalize">
-                          UI design & App development
+                        <h4 class="project-title">Simplify</h4>
+                        <p class="project-description">
+                            UI design & App development
                         </p>
-                        <a class="learn-more" href="./pages/projects.html?id=1">Learn more</a>
+                        <a class="learn-more" href="./html/projects.html?id=1">
+                            <p>Learn more</p>
+                        </a>
                     </div>
                 </a>
             </article>
             <article class="project-card">
-                <a class="project-wrapper" href="./pages/projects.html?id=2">
-                    <img class="img-project" src="./assets/projects-section/2.jpg" alt="Project 2"/>
+                <a class="project-wrapper" href="./html/projects.html?id=2">
+                    <img class="img-project" src="./images/projects-section/2.jpg" alt="Project 2" />
                     <div class="project-inner-card">
                         <h4 class="project-title">Dashcoin</h4>
-                        <p class="project-description capitalize">Web development</p>
-                        <a class="learn-more" href="./pages/projects.html?id=2">Learn more</a>
+                        <p class="project-description">
+                            Web development
+                        </p>
+                        <a class="learn-more" href="./html/projects.html?id=2">
+                            <p>Learn more</p>
+                        </a>
                     </div>
                 </a>
             </article>
             <article class="project-card">
-                <a class="project-wrapper" href="./pages/projects.html?id=3">
-                    <img class="img-project" src="./assets/projects-section/3.jpg" alt="Project 3"/>
+                <a class="project-wrapper" href="./html/projects.html?id=3">
+                    <img class="img-project" src="./images/projects-section/3.jpg" alt="Project 3" />
                     <div class="project-inner-card">
                         <h4 class="project-title">Vectorify</h4>
-                        <p class="project-description capitalize">
-                          User experience design
+                        <p class="project-description">
+                            User experience design
                         </p>
-                        <a class="learn-more" href="./pages/projects.html?id=3">Learn more</a>
+                        <a class="learn-more" href="./html/projects.html?id=3">
+                            <p>Learn more</p>
+                        </a>
                     </div>
                 </a>
             </article>
         </div>
-    </section>  
-    <section id="newsletter" style="height: 100px; background-color: beige;">
+    </section>
+    <section class="testimonial">
 
     </section>
+    <section id="services" class="services">
+     
+    </section>
+    <section id="newsletter">
+
+    </section>
+    <footer class="footer">
+        
+    </footer>
     <script src="./js/index.js"></script>
 </body>
 
