Agregado el pie de index y pagina project

--- a/index.html
+++ b/index.html
@@ -150,19 +150,77 @@
         </div>
     </section>
     <section id="services" class="services">
-     
+        <h2>Our services</h2>
+        <div class="services-container">
+          <article class="services-card">
+            <div class="img-services">
+              <img src="./images/services-section/icons/1.svg" alt="User inteface design icon"/>
+            </div>
+            <h4>User inteface design</h4>
+            <p>
+              Circle provides you with a stunning user interface design that is
+              accessible to everyone.
+            </p>
+            <a class="learn-more" href="#"><p>Learn more</p></a>
+          </article>
+          <article class="services-card">
+            <div class="img-services">
+              <img src="./images/services-section/icons/2.svg"alt="User experience design icon"/>
+            </div>
+            <h4>User experience design</h4>
+            <p>
+              Circle always focuses on delivering the best user experience to your
+              customers.
+            </p>
+            <a class="learn-more" href="#"><p>Learn more</p></a>
+          </article>
+          <article class="services-card">
+            <div class="img-services">
+              <img src="./images/services-section/icons/3.svg"alt="Application development icon"/>
+            </div>
+            <h4>Application development</h4>
+            <p>
+              We develop high-quality mobile and web applications using the latest
+              technology stack.
+            </p>
+            <a class="learn-more" href="#"><p>Learn more</p></a>
+          </article>
+        </div>
     </section>
     <section id="newsletter">
-
+        <h2>Do you have any questions?</h2>
+        <h3>Let us help you!</h3>
+        <form action="">
+          <input id="email" name="email" type="email" placeholder="Enter your email"/>
+          <a id="newsletter-suscribe" class="btn" href="./html/contact.html">Suscribe</a>
+        </form>
     </section>
+   
+    <footer class="footer">
+        <div class="address-info">
+            <a class="address-info-logo" href="./index.html">
+              <img src="./images/logos/circle.svg" alt="Circle Logo" />
+            </a>
+            <p>
+              2972 Westheimer Rd. Santa Ana,
+              <br />
+              Illinois 85486
+            </p>
+        </div>
+        <ul class="sitemap">
+            <li><a href="#">Team</a></li>
+            <li><a href="./index.html#services">Services</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="./index.html#projects">Projects</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+        </ul>
+    </footer>
     <div className="scroll-to-top">
         <span
           class="fa fa-arrow-up btn-scroll btn-scroll-position btn-scroll-style"
         ></span>
       </div>
-    <footer class="footer">
-        
-    </footer>
     <script src="./js/index.js"></script>
     <script src="./js/burger.js"></script>
     <script src="./js/scroll.js"></script>
