Avance en responsive y revision de js

--- a/html/projects.html
+++ b/html/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Circle cloning</title>
     <link rel="stylesheet"type="text/css"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="shortcut icon"type="image/x-icon"href="./assets/logos/favicon.ico"/>
     <link rel="stylesheet" href="../css/index.css">
@@ -23,7 +23,7 @@
                 <li class="nav-link"><a href="../index.html#projects">Projects</a></li>
                 <li class="nav-link"><a href="../index.html#services">Services</a></li>
             </ul>
-            <a class="btn" id="header-nav-btn" href="../html/contact.html">Contact us</a>
+            <a class="btn" id="header-nav-btn" href="../html/contact.html">Contact Us</a>
             <div class="nav-burger">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -124,7 +124,14 @@
             </article>
         </div>
     </section>
-
+    <section id="newsletter">
+        <h2>Do you have any questions?</h2>
+        <h3>Let us help you!</h3>
+        <form action="">
+          <input id="email" name="email" type="email" placeholder="Enter your email"/>
+          <a id="newsletter-suscribe" class="btn" href="../html/contact.html">Suscribe</a>
+        </form>
+    </section>
     <footer class="footer">
         <div class="address-info">
             <a class="address-info-logo" href="../index.html">
@@ -145,6 +152,11 @@
             <li><a href="#">Privacy Policy</a></li>
         </ul>
     </footer>
+    <div className="scroll-to-top">
+        <span
+          class="fa fa-arrow-up btn-scroll btn-scroll-position btn-scroll-style">
+        </span>
+    </div>
     <script src="../js/burger.js"></script>
     <script src="../js/scroll.js"></script>
     <script src="../js/projects.js"></script>
