--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="nav-link"><a href="./index.html#projects">Projects</a></li>
                 <li class="nav-link"><a href="./index.html#services">Services</a></li>
             </ul>
-            <a class="btn" id="header-nav-btn" href="./html/contact.html">Contact us</a>
+            <a class="btn" id="header-nav-btn" href="./html/contact.html">Contact Us</a>
             <div class="nav-burger">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -218,9 +218,9 @@
     </footer>
     <div className="scroll-to-top">
         <span
-          class="fa fa-arrow-up btn-scroll btn-scroll-position btn-scroll-style"
-        ></span>
-      </div>
+          class="fa fa-arrow-up btn-scroll btn-scroll-position btn-scroll-style">
+        </span>
+    </div>
     <script src="./js/index.js"></script>
     <script src="./js/burger.js"></script>
     <script src="./js/scroll.js"></script>
