Funcionalidad del burger y repaso general

--- a/html/contact.html
+++ b/html/contact.html
@@ -55,8 +55,9 @@
         <div class="message">
             <label for="message">Message</label><br>
             <textarea id="message" name="message"  cols="30" rows="10"
-                placeholder="Write your message here..." required></textarea>
-                <p id="errorMessageUser" hidden class="errorForm">The message must be at least 5 characters</p>
+                placeholder="Write your message here..." required>
+            </textarea>
+            <p id="errorMessageUser" hidden class="errorForm">The message must be at least 5 characters</p>
         </div>
         <div class="buttonSubmit" >
             <button id="submitForm" type="button">Submit</button>
