--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 <img class="img-hero" src="./images/hero-section/hero-image.png" alt="Hero image" />
             </div>
             <div>
-                <img class="img-card-top" src="./images/hero-section/card-1.png" alt="Choose your credit card" />
+                <img class="img-card img-card-top"  src="./images/hero-section/card-1.png" alt="Choose your credit card" />
             </div>
             <div>
-                <img class="img-card-bottom" src="./images/hero-section/card-2.png"
+                <img class="img-card img-card-bottom" src="./images/hero-section/card-2.png"
                     alt="Project has been accepted card" />
             </div>
         </div>
