--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Circle cloning</title>
-    <link rel="stylesheet"type="text/css"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="shortcut icon"type="image/x-icon"href="./assets/logos/favicon.ico"/>
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/logos/favicon.ico" />
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/scroll.css">
@@ -54,7 +55,8 @@
                 <img class="img-hero" src="./images/hero-section/hero-image.png" alt="Hero image" />
             </div>
             <div>
-                <img class="img-card img-card-top"  src="./images/hero-section/card-1.png" alt="Choose your credit card" />
+                <img class="img-card img-card-top" src="./images/hero-section/card-1.png"
+                    alt="Choose your credit card" />
             </div>
             <div>
                 <img class="img-card img-card-bottom" src="./images/hero-section/card-2.png"
@@ -128,83 +130,90 @@
     </section>
     <section class="testimonial">
         <div class="testimonial-memojis">
-            <img class="testimonial-memoji1"src="./images/testimonial-section/memoji-1.png"alt="Memoji 1"/>
-            <img class="testimonial-memoji2"src="./images/testimonial-section/memoji-2.png"alt="Memoji 2"/>
-            <img class="testimonial-memoji3"src="./images/testimonial-section/memoji-3.png"alt="Memoji 3"/>
-            <img class="testimonial-memoji4"src="./images/testimonial-section/memoji-4.png"alt="Memoji 4"/>
+            <img class="testimonial-memoji1" src="./images/testimonial-section/memoji-1.png" alt="Memoji 1" />
+            <img class="testimonial-memoji2" src="./images/testimonial-section/memoji-2.png" alt="Memoji 2" />
+            <img class="testimonial-memoji3" src="./images/testimonial-section/memoji-3.png" alt="Memoji 3" />
+            <img class="testimonial-memoji4" src="./images/testimonial-section/memoji-4.png" alt="Memoji 4" />
         </div>
         <div class="testimonial-text">
             <h3 class=>Hear what our clients have to say</h3>
             <p>
-              "Circle helped us through every stage of our startup.
-              <br />
-              We really enjoyed working with you."
+                "Circle helped us through every stage of our startup.
+                <br />
+                We really enjoyed working with you."
             </p>
         </div>
         <div class="testimonial-profile">
-            <img class="testimonial-profile-img"src="./images/testimonial-section/profile.png"alt="Kristin Watson profile image"/>
+            <img class="testimonial-profile-img" src="./images/testimonial-section/profile.png"
+                alt="Kristin Watson profile image" />
             <div class="testimonial-profile-info">
-              <p class="name">Kristin Watson</p>
-              <p class="origin">Booking.com</p>
+                <p class="name">Kristin Watson</p>
+                <p class="origin">Booking.com</p>
             </div>
         </div>
     </section>
     <section id="services" class="services">
         <h2>Our services</h2>
         <div class="services-container">
-          <article class="services-card">
-            <div class="img-services">
-              <img src="./images/services-section/icons/1.svg" alt="User inteface design icon"/>
-            </div>
-            <h4>User inteface design</h4>
-            <p>
-              Circle provides you with a stunning user interface design that is
-              accessible to everyone.
-            </p>
-            <a class="learn-more" href="#"><p>Learn more</p></a>
-          </article>
-          <article class="services-card">
-            <div class="img-services">
-              <img src="./images/services-section/icons/2.svg"alt="User experience design icon"/>
-            </div>
-            <h4>User experience design</h4>
-            <p>
-              Circle always focuses on delivering the best user experience to your
-              customers.
-            </p>
-            <a class="learn-more" href="#"><p>Learn more</p></a>
-          </article>
-          <article class="services-card">
-            <div class="img-services">
-              <img src="./images/services-section/icons/3.svg"alt="Application development icon"/>
-            </div>
-            <h4>Application development</h4>
-            <p>
-              We develop high-quality mobile and web applications using the latest
-              technology stack.
-            </p>
-            <a class="learn-more" href="#"><p>Learn more</p></a>
-          </article>
+            <article class="services-card">
+                <div class="img-services">
+                    <img src="./images/services-section/icons/1.svg" alt="User inteface design icon" />
+                </div>
+                <h4>User inteface design</h4>
+                <p>
+                    Circle provides you with a stunning user interface design that is
+                    accessible to everyone.
+                </p>
+                <a class="learn-more" href="#">
+                    <p>Learn more</p>
+                </a>
+            </article>
+            <article class="services-card">
+                <div class="img-services">
+                    <img src="./images/services-section/icons/2.svg" alt="User experience design icon" />
+                </div>
+                <h4>User experience design</h4>
+                <p>
+                    Circle always focuses on delivering the best user experience to your
+                    customers.
+                </p>
+                <a class="learn-more" href="#">
+                    <p>Learn more</p>
+                </a>
+            </article>
+            <article class="services-card">
+                <div class="img-services">
+                    <img src="./images/services-section/icons/3.svg" alt="Application development icon" />
+                </div>
+                <h4>Application development</h4>
+                <p>
+                    We develop high-quality mobile and web applications using the latest
+                    technology stack.
+                </p>
+                <a class="learn-more" href="#">
+                    <p>Learn more</p>
+                </a>
+            </article>
         </div>
     </section>
     <section id="newsletter">
         <h2>Do you have any questions?</h2>
         <h3>Let us help you!</h3>
         <form action="">
-          <input id="email" name="email" type="email" placeholder="Enter your email"/>
-          <a id="newsletter-suscribe" class="btn" href="./html/contact.html">Suscribe</a>
+            <input id="email" name="email" type="email" placeholder="Enter your email" />
+            <a id="newsletter-suscribe" class="btn" href="./html/contact.html">Suscribe</a>
         </form>
     </section>
-   
+
     <footer class="footer">
         <div class="address-info">
             <a class="address-info-logo" href="./index.html">
-              <img src="./images/logos/circle.svg" alt="Circle Logo" />
+                <img src="./images/logos/circle.svg" alt="Circle Logo" />
             </a>
             <p>
-              2972 Westheimer Rd. Santa Ana,
-              <br />
-              Illinois 85486
+                2972 Westheimer Rd. Santa Ana,
+                <br />
+                Illinois 85486
             </p>
         </div>
         <ul class="sitemap">
@@ -217,8 +226,7 @@
         </ul>
     </footer>
     <div className="scroll-to-top">
-        <span
-          class="fa fa-arrow-up btn-scroll btn-scroll-position btn-scroll-style">
+        <span class="fa fa-arrow-up btn-scroll btn-scroll-position btn-scroll-style">
         </span>
     </div>
     <script src="./js/index.js"></script>
