modificación en javascript index.js, projects.css

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <img class="img-client" src="./images/logos/amazon-logo.svg" alt="amazon logo" />
         </a>
     </section>
-    <section id="projects" class="recent-projects">
+    <section id="projects" class="recent-projects" hidden>
         <h2>Recent projects</h2>
         <div class="projects-container">
             <article class="project-card">
