Variaciones js en index.js, projects,js y repaso gral

--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
         </ul>
     </footer>
     <div className="scroll-to-top">
-        <span class="fa fa-arrow-up btn-scroll btn-scroll-position btn-scroll-style">
-        </span>
+        <span class="fa fa-arrow-up btn-scroll btn-scroll-position btn-scroll-style"></span>
     </div>
     <script src="./js/index.js"></script>
     <script src="./js/burger.js"></script>
     <script src="./js/scroll.js"></script>
+    
 </body>
 
 </html>
