--- a/html/contact.html
+++ b/html/contact.html
@@ -7,6 +7,7 @@
     <title>Circle cloning</title>
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="../css/burger.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
